--- a/app/src/main/res/layout/activity_customer_change_password.xml
+++ b/app/src/main/res/layout/activity_customer_change_password.xml
@@ -17,7 +17,7 @@
         android:ems="10"
         android:hint=""
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
