--- a/app/src/main/res/layout/activity_add_promotions.xml
+++ b/app/src/main/res/layout/activity_add_promotions.xml
@@ -56,6 +56,8 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:hint="@string/til_hint_description"
+        app:counterEnabled="true"
+        app:counterMaxLength="100"
         app:endIconMode="clear_text"
         app:helperText="@string/required"
         app:helperTextTextColor="@color/red"
