admin login facility was added

--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img"
-    tools:context=".AddProduct">
+    tools:context=".ui.admin.AddProduct">
 
   <ImageView
       android:id="@+id/ed_add"
