--- a/app/src/main/res/layout/activity_admin_landing_page.xml
+++ b/app/src/main/res/layout/activity_admin_landing_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin_landing_page">
+    tools:context=".ui.admin.admin_landing_page">
 
     <ImageView
         android:id="@+id/imageView3"
