--- a/app/src/main/res/layout/activity_delete_product.xml
+++ b/app/src/main/res/layout/activity_delete_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img"
-    tools:context=".DeleteProduct">
+    tools:context=".ui.admin.DeleteProduct">
 
     <ImageView
         android:id="@+id/imageView2"
