--- a/app/src/main/res/layout/activity_update_product_layout.xml
+++ b/app/src/main/res/layout/activity_update_product_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img"
-    tools:context=".UpdateProductLayout">
+    tools:context=".ui.admin.UpdateProductLayout">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/viewUpdateProduct"
