--- a/app/src/main/res/layout/activity_update_products.xml
+++ b/app/src/main/res/layout/activity_update_products.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".UpdateProducts">
+    tools:context=".ui.admin.UpdateProducts">
     app:cardCornerRadius="6dp"
     android:elevation="6dp"
     app:cardBackgroundColor="@color/white"
