lasinud's navigations were completed

--- a/app/src/main/res/layout/activity_customer_navigation.xml
+++ b/app/src/main/res/layout/activity_customer_navigation.xml
@@ -12,6 +12,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="50dp"
         android:text="View Profile"
+        android:onClick="onViewProfileClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +23,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:text="View Favourites"
+        android:onClick="onViewFavouritesClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav_view_profile_btn" />
@@ -32,6 +34,7 @@
         android:layout_height="48dp"
         android:layout_marginBottom="10dp"
         android:text="Sign Out"
+        android:onClick="onSignOutClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
