--- a/app/src/main/res/layout/activity_customer_navigation.xml
+++ b/app/src/main/res/layout/activity_customer_navigation.xml
@@ -6,16 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".ui.customer.CustomerNavigationActivity">
 
+    <ImageView
+        android:id="@+id/cus_nav_img"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/mrcofee" />
+
+    <TextView
+        android:id="@+id/cus_nav_txt_welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="serif"
+        android:text="@string/adminPanelName"
+        android:textColor="@color/brown"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cus_nav_img" />
+
     <Button
         android:id="@+id/nav_view_profile_btn"
         android:layout_width="227dp"
         android:layout_height="48dp"
-        android:layout_marginTop="50dp"
-        android:text="View Profile"
+        android:layout_marginTop="30dp"
         android:onClick="onViewProfileClick"
+        android:text="View Profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cus_nav_txt_welcome" />
 
     <Button
         android:id="@+id/nav_view_favourites_btn"
