--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <EditText
             android:fontFamily="@font/form_labels"
@@ -84,7 +84,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/form_labels"
-            android:text="Gender"
+            android:text="@string/signup_lbl_gender"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_birthday" />
 
@@ -99,7 +99,7 @@
             android:ems="10"
             android:hint="@string/auth_phone_lbl"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="phone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -211,24 +211,6 @@
             android:importantForAutofill="no" />
 
         <Button
-            android:visibility="invisible"
-            android:fontFamily="@font/submit_button"
-            android:id="@+id/button6"
-            style="@style/AuthButton"
-            android:layout_width="166dp"
-            android:layout_height="39dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="25dp"
-            android:background="#F00"
-            android:text="@string/google_btn_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button5"
-            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
-
-        <Button
             android:id="@+id/btn_signup"
             style="@style/AuthButton"
             android:layout_width="166dp"
@@ -243,24 +225,6 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_confirmPassword" />
 
 
-        <Button
-            android:visibility="invisible"
-            android:fontFamily="@font/submit_button"
-            android:id="@+id/button5"
-            style="@style/AuthButton"
-            android:layout_width="166dp"
-            android:layout_height="39dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="28dp"
-            android:background="#00F"
-            android:text="@string/facebook_btn_txt"
-            app:layout_constraintEnd_toStartOf="@+id/button6"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
-
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
@@ -274,7 +238,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button5" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
         <TextView
             android:id="@+id/textView10"
@@ -282,14 +246,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="48dp"
-            android:text="@string/signin_button_text"
-            android:textColor="@color/link_text"
             android:clickable="true"
             android:onClick="onSignInLinkClick"
+            android:text="@string/signin_button_text"
+            android:textColor="@color/link_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/button5" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
 
         <TextView
             android:id="@+id/txt_birthday"
@@ -303,7 +267,7 @@
             android:fontFamily="@font/form_labels"
             android:importantForAutofill="no"
             android:onClick="onBirthdayPickClick"
-            android:text="Click to pick a date"
+            android:text="@string/signup_txt_bd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -327,7 +291,7 @@
                     android:layout_marginTop="5dp"
                     android:checked="true"
                     android:layout_weight="1"
-                    android:text="Male"
+                    android:text="@string/signup_gender_male"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="parent" />
 
@@ -338,7 +302,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="25dp"
                     android:layout_weight="1"
-                    android:text="Female"
+                    android:text="@string/signup_gender_female"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="parent" />
 
