--- a/app/src/main/res/layout/activity_customer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_customer_edit_profile.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="30dp"
-        android:text="Change your details here..."
+        android:text="@string/edit_profile_change_your_details_here"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,7 +108,7 @@
         android:layout_marginBottom="15dp"
         android:background="#FFF"
         android:fontFamily="@font/submit_button"
-        android:text="Cancel"
+        android:text="@string/edit_profile_cancel"
         android:onClick="onCancelClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="15dp"
         android:fontFamily="@font/submit_button"
-        android:text="Save Changes"
+        android:text="@string/edit_profile_save_changes"
         android:onClick="onSaveChangesCLick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
