change password refractored

--- a/app/src/main/res/layout/activity_customer_change_password.xml
+++ b/app/src/main/res/layout/activity_customer_change_password.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="25dp"
         android:ems="10"
-        android:hint=""
+        android:hint="@string/chng_pwd_confirm_password"
         android:importantForAutofill="no"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="30dp"
-        android:text="Secure your account here..."
+        android:text="@string/chng_pwd_secure_your_account_here"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +52,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/form_labels"
-        android:text="New Password"
+        android:text="@string/chng_pwd_new_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -65,7 +65,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="25dp"
         android:ems="10"
-        android:hint=""
+        android:hint="@string/chng_pwd_new_password_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:layout_marginBottom="15dp"
         android:background="#FFF"
         android:fontFamily="@font/submit_button"
-        android:text="Cancel"
+        android:text="@string/chng_pwd_cancel"
         android:onClick="onCancelButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
         android:layout_marginBottom="15dp"
         android:fontFamily="@font/submit_button"
         android:onClick="onChangePasswordButtonClick"
-        android:text="Change Password"
+        android:text="@string/chng_pwd_change_password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
