--- a/app/src/main/res/layout/activity_admin_landing_page.xml
+++ b/app/src/main/res/layout/activity_admin_landing_page.xml
@@ -81,4 +81,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editProduct" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="299dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="40dp"
+        android:text="ORDER PDF GENERATE"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/promotions"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
