--- a/app/src/main/res/layout/activity_admin_view_promotion.xml
+++ b/app/src/main/res/layout/activity_admin_view_promotion.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminViewPromotion"
+    tools:context=".ui.admin.AdminViewPromotion"
     android:layout_margin="16dp">
 
   <ImageView
