--- a/app/src/main/res/layout/activity_customer_view_promotion.xml
+++ b/app/src/main/res/layout/activity_customer_view_promotion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomerViewPromotion"
+    tools:context=".ui.customer.CustomerViewPromotion"
     android:layout_margin="16dp">
 
     <ImageView
