--- a/app/src/main/res/layout/activity_customer_view_promotions_list.xml
+++ b/app/src/main/res/layout/activity_customer_view_promotions_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomerViewPromotionsList">
+    tools:context=".ui.customer.CustomerViewPromotionsList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_customer"
