--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/espresso</item>
         <item name="colorPrimaryDark">@color/darkbrown</item>
-        <item name="colorAccent"@color/brown</item>
+        <item name="colorAccent">#384FE6</item>
     </style>
 
     <style name="AuthButton">
