--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -61,9 +61,8 @@
       android:layout_width="116dp"
       android:layout_height="44dp"
       android:layout_marginStart="24dp"
-      android:layout_marginLeft="24dp"
       android:layout_marginTop="104dp"
-      android:text="@string/ed_addimage"
+      android:text="@string/ed_add_name"
       android:textColor="@color/black"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/ed_addimage" />
