--- a/app/src/main/res/layout/activity_admin_landing_page.xml
+++ b/app/src/main/res/layout/activity_admin_landing_page.xml
@@ -35,8 +35,10 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
+        android:backgroundTint="@color/button_background"
         android:onClick="addProductDetails"
         android:text="@string/addProduct"
+        android:textColor="@color/button_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -48,8 +50,10 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/button_background"
         android:onClick="viewProduct"
         android:text="@string/viewAllProduct"
+        android:textColor="@color/button_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -61,8 +65,10 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/button_background"
         android:onClick="updateProductData"
         android:text="@string/editProduct"
+        android:textColor="@color/button_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -74,7 +80,9 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
+        android:backgroundTint="@color/button_background"
         android:text="@string/promotions"
+        android:textColor="@color/button_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -86,7 +94,9 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/button_background"
         android:text="@string/order"
+        android:textColor="@color/button_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
